added styling for about dealer image; take 1 of photo gallery on about page - currently set to adaptive height; added styling for dealers with no logo; added dark red hover bg color (from Josh) for buttons

--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -355,6 +355,7 @@
         }
     }
     .logo {
+        @extend %upper;
         display: none;
         margin-right: 5%;
         padding-right: 4%;
