--- a/src/public/sass/modules/_icons.scss
+++ b/src/public/sass/modules/_icons.scss
@@ -104,6 +104,8 @@
 
 /*-----------------------
   @ABOUT
+
+  used for principle icons on About page
 ------------------------*/
 .icon-about {
     display: inline-block;
