--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -241,6 +241,11 @@ legend {
     font-size: 0.875em;
     outline: none;
     padding: .85em 1.5em .85em;
+    transition: all .1s ease-in-out;
+
+    &:hover {
+        background: $color-red-hover;
+    }
 }
 button {
     @extend %button;
