--- a/src/public/sass/pages/_about.scss
+++ b/src/public/sass/pages/_about.scss
@@ -4,36 +4,18 @@
     }
 }
 .about-dealer {
-    overflow: hidden;
 
-    @include bp($foundation-small, $foundation-med) {
-        padding-bottom: 270px;
-
-        .dealer-image {
-            bottom: 5%;
-            float: none;
-            left: 50%;
-            margin-left: 0;
-            position: absolute;
-            transform: translateX(-50%);
-        }
-    }
     .about-dealer-text {
         line-height: 2;
     }
     .about-dealer-image {
-        
-        .about-dealer-image--container {
-            background-position: 50% 50%;
-            background-size: cover;
-            background-repeat: no-repeat;
-            border-radius: 100%;
-            height: 250px;
-            width: 250px;
+        display: inline-block;
+        margin-bottom: 3em;
+
+        img {
+            max-height: 250px;
+            max-width: 300px;
         }
-        /*img {
-            box-shadow: 0 0 6px rgba(0,0,0,.3);
-        }*/
     }
 }
 
@@ -43,8 +25,14 @@
         padding: 0;
     }
 
-    @include bp($tablet, $foundation-large) {
-        padding: 60px;
+    @include bp($tablet, $my-large) {
+        padding: 88px;
+    }
+    @include bp($my-large, $my-very-large) {
+        padding: {
+            left: 10%;
+            right: 10%;
+        }
     }
 }
 
