--- a/src/public/sass/layout/_footer--search.scss
+++ b/src/public/sass/layout/_footer--search.scss
@@ -10,7 +10,6 @@
 
 .footer-section {
     float: left;
-    min-height: 240px;
     padding: 5% 2%;
 
     * {
@@ -18,11 +17,14 @@
         vertical-align: middle;
     }
 
+    @include bp($foundation-small, $tablet) {
+        padding-left: 1em;
+    }
     @include bp($tablet) {
         min-height: 190px;
     }
     @include bp($foundation-large) {
-        min-height: 200px;
+        min-height: 220px;
     }
     @include bp($my-large) {
         min-height: 240px;
@@ -30,7 +32,7 @@
 }
 
 .footer-section--left {
-    width: 70%;
+    width: 100%;
 
     .logo {
         width: 105px;
@@ -72,12 +74,22 @@
     }
     .footer-text {
         font-size: .875em;
-        width: 100%;
+        margin-top: 2em;
+        width: 90%;
 
+        @include bp($mobile-landscape) {
+            width: 80%;
+        }
+        @include bp($foundation-med, $tablet) {
+            display: block;
+            width: 60%;
+        }
         @include bp($tablet, $foundation-large) {
+            margin-top: 0;
             width: 60%;
         }
         @include bp($foundation-large) {
+            margin-top: 0;
             max-width: 460px;
         }
         @include bp($my-large) {
@@ -88,9 +100,15 @@
     @include bp($tablet) {
         width: 80%;
     }
-    @include bp($my-large) {
-        width: 66.66667%;
+    @include bp(800px, $foundation-large) {
+        padding-left: 6%;
     }
+    @include bp($foundation-large) {
+        padding-left: 8%;
+    }
+    /* @include bp($my-large) {
+        width: 66.66667%;
+    } */
 }
 
 .footer-section--right {
@@ -114,20 +132,28 @@
     }
     .velux-link {
         display: block;
-        font-size: .875em;
-        margin-bottom: 1em;
+        margin-bottom: .5em;
+        margin-top: .66667em;
 
-        &:hover {
-            @extend %no-underline;
+        a {
+            font-family: $font-family-default;
+            font-size: .875em;
+
+            &:hover {
+                @extend %no-underline;
+            }
         }
     }
 
+    @include bp($foundation-small, $tablet) {
+        border-top: 1px solid $color-secondary;
+    }
     @include bp($tablet) {
         border-left: 1px solid $color-secondary;
         width: auto;
     }
     @include bp($my-large) {
-        width: 33.33333%;
+        width: auto;
     }
 }
 
