finished styling search/results page; reworked padding for new homepage hero image/headline; added 1% to masthead-section--small so phone number has extra padding for numbers with '1-' or '()'

--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -256,6 +256,14 @@ a.cta-text {
 /*-----------------------
   @PADDING
 ------------------------*/
+
+.push-bottom--half {
+    padding-bottom: 5%;
+}
+.push-top--half {
+    padding-top: 5%;
+}
+
 %snug-top {
     margin-top: 0 !important;
     padding-top: 0 !important;
