--- a/src/public/sass/layout/_footer--search.scss
+++ b/src/public/sass/layout/_footer--search.scss
@@ -1,3 +1,11 @@
+.footer-wrapper {
+
+}
+
+.footer--search {
+    
+}
+
 .footer-container {
 
 }
@@ -155,8 +163,4 @@
     @include bp($my-large) {
         width: auto;
     }
-}
-
-.footer-wrapper {
-    
 }
