--- a/src/public/sass/layout/_nav-secondary.scss
+++ b/src/public/sass/layout/_nav-secondary.scss
@@ -1,4 +1,4 @@
-.thin-strip {
+/* .thin-strip {
     @extend %centered;
     background: $color-grey-dark;
     padding: 20px 0;
@@ -6,7 +6,7 @@
     @include bp($foundation-large) {
         padding: 0;
     }
-}
+} */
 
 .nav-secondary {
     display: none;
