--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -41,6 +41,7 @@
 @import "modules/statements";
 @import "modules/tabs-simple";
 @import "modules/testimonials";
+@import "modules/thin-strip";
 @import "modules/welcome";
 
 @import "pages/about";
@@ -53,6 +54,5 @@
 @import "pages/product-detail";
 @import "pages/products";
 @import "pages/promotions";
-@import "pages/search";
 @import "pages/styleguide";
 @import "pages/why-skylights";
