removed 4px top offset for breadcrumb-links

--- a/src/public/sass/modules/_breadcrumbs.scss
+++ b/src/public/sass/modules/_breadcrumbs.scss
@@ -29,7 +29,7 @@
         .breadcrumb-links {
             display: none;
             float: right;
-            top: 4px;
+            // top: 4px;
 
             a:nth-child(2) {
                 margin-left: 15px;
