--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -625,7 +625,7 @@
     }
 }
 
-.tax-credit {
+.tax-credit-row {
     padding-top: 5%;
 
     .cta-padding {
@@ -699,7 +699,7 @@
     }
 }
 
-.tax-credit.left-side {
+.tax-credit-row.left-side {
 
     .full-tablet {
 
