added testimonials header to testimonials section on about page; removed border from top of brochures page; made copy edits to vss-no leak ps pages; updated products bg image

--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -340,6 +340,16 @@ a.cta-text {
     background-color: $color-grey-dark;
 }
 
+%bg-gradient {
+    background-image: url('../images/backgrounds/products-bg.jpg');
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-gradient {
+    @extend %bg-gradient;
+}
+
 /*-----------------------
   @SHADOWS
 ------------------------*/
