--- a/src/public/sass/modules/_welcome.scss
+++ b/src/public/sass/modules/_welcome.scss
@@ -230,37 +230,50 @@
 
 .commercial-promo {
     background-image: url('../images/welcome/commercial-promo-wide.jpg');
-    padding: 8% 10% 33%;
+    padding: 25% 10% 20%;
+
+    h4 {
+        font-size: 1.25em;
+        line-height: 1.5;
+        margin: 0 auto;
+        max-width: 450px;
+        text-shadow: 1px 1px 4px rgba(20,20,20,1);
+    }
 
     @include bp($foundation-small, $mobile-landscape) {
-        padding: 10% 0 50%;
+        padding: 40% 10% 40%;
 
-        h4 {
+        /* h4 {
             font-size: 1em;
-        }
+        } */
 
     }
     @include bp($foundation-large) {
         background-image: url('../images/welcome/commercial-promo.jpg');
         margin-bottom: 10px;
-        padding: 15% 0 89%;
+        padding: 12% 0 92%;
 
         h4 {
-            margin: 0 auto 10px;
             width: 360px;
         }
     }
     @include bp(1100px) {
-        padding-bottom: 87%;
+        padding-bottom: 89%;
     }
     @include bp(1200px) {
-        padding-bottom: 85%;
+        padding-bottom: 87%;
     }
     @include bp($my-large) {
-        padding-bottom: 82%;
+        padding-bottom: 75%;
+    }
+    @include bp(1450px) {
+        padding-bottom: 78%;
     }
     @include bp($my-very-large) {
-        padding-bottom: 88%;
+        padding-bottom: 75%;
+    }
+    @include bp(1750px) {
+        padding-bottom: 77%;
     }
 }
 
