--- a/src/public/sass/pages/_product-detail.scss
+++ b/src/public/sass/pages/_product-detail.scss
@@ -100,17 +100,8 @@
     }
     .product-image {
         margin: 0 auto;
+        max-width: 300px;
         width: 100%;
-
-        @include bp($mobile-landscape) {
-            width: 90%;
-        }
-        @include bp($foundation-med) {
-            width: 85%;
-        }
-        @include bp($tablet) {
-            width: 100%;
-        }
     }
 
     div {
