--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -442,7 +442,7 @@
     list-style: none;
     padding-left: 1.125em;
 
-    .ps-list--margin {
+    &.ps-list--margin {
         margin-bottom: 65px;
     }
 
