updated styling for product category carousel bg's; adjusted styling for floating skylight image on no-leak and no-leak-night paid search pages

--- a/src/public/sass/pages/_category.scss
+++ b/src/public/sass/pages/_category.scss
@@ -59,27 +59,6 @@
 /*-----------------------
   @RESIDENTIAL SKYLIGHTS
 ------------------------*/
-.hero--residential-1 {
-    background-image: url('../images/carousels/residential-products-hero-kitchen.jpg');
-}
-.hero--residential-2 {
-    background-image: url('../images/carousels/residential-products-hero-bathroom.jpg');
-}
-.hero--residential-3 {
-    background-image: url('../images/carousels/residential-products-hero-bedroom.jpg');
-}
-.hero--suntunnel-1 {
-    background-image: url('../images/carousels/sun-tunnel-products-hero-hallway.jpg');
-}
-.hero--suntunnel-2 {
-    background-image: url('../images/carousels/sun-tunnel-products-hero-entrance.jpg');
-}
-.hero--commercial-1 {
-    background-image: url('../images/carousels/commercial-products-hero-classroom.jpg');
-}
-.hero--commercial-2 {
-    background-image: url('../images/carousels/commercial-products-hero-garage.jpg');
-}
 .hero--residential-1,
 .hero--residential-2,
 .hero--residential-3,
@@ -87,6 +66,31 @@
 .hero--suntunnel-2,
 .hero--commercial-1,
 .hero--commercial-2 {
-    background-position: 0% 50%;
+    background-position: 50% 50%;
     background-size:cover;
+}
+.hero--residential-1 {
+    background-image: url('../images/carousels/residential-products-hero-kitchen.jpg');
+    background-position: 0 50%;
+}
+.hero--residential-2 {
+    background-image: url('../images/carousels/residential-products-hero-bathroom.jpg');
+    background-position: 100% 100%;
+}
+.hero--residential-3 {
+    background-image: url('../images/carousels/residential-products-hero-bedroom.jpg');
+}
+.hero--suntunnel-1 {
+    background-image: url('../images/carousels/sun-tunnel-products-hero-hallway.jpg');
+    background-position: 50% 0;
+}
+.hero--suntunnel-2 {
+    background-image: url('../images/carousels/sun-tunnel-products-hero-entrance.jpg');
+    background-position: 50% 20%;
+}
+.hero--commercial-1 {
+    background-image: url('../images/carousels/commercial-products-hero-classroom.jpg');
+}
+.hero--commercial-2 {
+    background-image: url('../images/carousels/commercial-products-hero-garage.jpg');
 }
