updating class/padding issue on h4 in contact form on energy efficiency paid search page

--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -803,7 +803,7 @@
         width: 125px;
     }
 
-    h4 {
+    .statement h4 {
         @include bp($foundation-med) {
             padding-left: 9.5em;
         }
