--- a/src/admin/assets/css/admin_styles.css
+++ b/src/admin/assets/css/admin_styles.css
@@ -276,6 +276,12 @@ p
 	border-bottom:2px solid #89d2f5;
 	color:#fff;
 }
+#global.velux_admin
+{
+	background-color: #e0e0e0;
+	border-bottom:2px solid #ccc;
+	color:#999;
+}
 #wrapper
 {
 	width:100%;
