centered 'N' and 'S' in compass icons; general font-weight, padding, and line-break fixes in product cards, products short, product detail, paid search, installing, why-skylights, product category, and product detail pages

--- a/src/public/sass/modules/_icons.scss
+++ b/src/public/sass/modules/_icons.scss
@@ -140,6 +140,7 @@
         font-size: 2em;
         height: $d-compass;
         left: 0;
+        padding-left: 1px;
         position: absolute;
         top: 0;
         width: $d-compass;
@@ -153,8 +154,11 @@
         &:before {
             color: $color-green;
             content: 'N';
-            padding-left: 2px;
-            padding-top: $letter-padding-top + $d-pointer;
+            padding-top: $letter-padding-top + $d-pointer + 5px;
+
+            @include bp($my-very-large) {
+                padding-top: $letter-padding-top + $d-pointer;
+            }
         }
     }
     &.icon-compass--south {
@@ -167,8 +171,11 @@
         &:before {
             color: $color-blue;
             content: 'S';
-            padding-left: 2px;
-            padding-top: $letter-padding-top;
+            padding-top: $letter-padding-top + 5px;
+
+            @include bp($my-very-large) {
+                padding-top: $letter-padding-top;
+            }
         }
     }
 }
